@@ -18,6 +18,7 @@ resources 'repository' => 'git://github.com/tupinek/Error-Pure-Always';
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.03;
 test_requires 'Test::More' => 0;
+test_requires 'Test::NoWarnings' => 0;
 test_requires 'Test::Pod::Coverage' => 0;
 tests_recursive;
 version '0.03';
