@@ -4,7 +4,8 @@ use warnings;
 
 # Modules.
 use Error::Pure::Always;
-use Test::More 'tests' => 1;
+use Test::More 'tests' => 2;
+use Test::NoWarnings;
 
 # Test.
 is($Error::Pure::Always::VERSION, 0.03, 'Version.');
