@@ -3,7 +3,8 @@ use strict;
 use warnings;
 
 # Modules.
-use Test::Pod::Coverage 'tests' => 1;
+use Test::NoWarnings;
+use Test::Pod::Coverage 'tests' => 2;
 
 # Test.
 pod_coverage_ok('Error::Pure::Always', 'Error::Pure::Always is covered.');
